--- a/shopP/form/templates/form.html
+++ b/shopP/form/templates/form.html
@@ -25,7 +25,7 @@
     </nav>
     
     <container>
-        <form action="POST">
+        <form method="post">
             {%csrf_token%}
             <h1>Form</h1>
             <label>Passenger Name</label><br>
