--- a/shopP/shopA/templates/travel.html
+++ b/shopP/shopA/templates/travel.html
@@ -54,7 +54,10 @@
                 <li>Transporation</li>
                 <li>Price</li>
             </ul>
-            <button type="submit" style="margin:1rem 0;">Book</button>
+            <!-- <button type="submit" style="margin:1rem 0;">Book</button> -->
+            <div class="b-d-link">
+                <a href="{%url 'form'%}">Book</a>
+            </div>
         </div>
     </div>
 
