--- a/shopP/shopA/static/css/form.css
+++ b/shopP/shopA/static/css/form.css
@@ -16,7 +16,7 @@ nav{
 nav .nav-head img{
     display: none;
 }
-@media (max-width:530px) and (min-width:300px){
+@media (max-width:530px) and (min-width:350px){
     nav .nav-head img{
        display: block; 
        margin-top: 2rem;
@@ -32,6 +32,34 @@ nav .nav-head img{
     }
     footer .row .col-2 h4,p{
         font-size: 1rem;
+    }
+    footer .last-line p,i{
+        font-size: 0.5rem;
+    }
+    form{
+        font-size: 0.5rem;
+    }
+    form input{
+        margin: 0rem;
+        font-size: 0.5rem;
+    }
+}
+@media (max-width:350px) and (min-width:280px){
+    nav .nav-head img{
+       display: block; 
+       margin-top: 2rem;
+    }
+    nav .nav-head h1{
+        display: none;
+    }
+    footer .row .col-1 h3{
+        font-size: 0.7rem;
+    }
+    footer .row .col-1 .social-link{
+        font-size: 0.7rem;
+    }
+    footer .row .col-2 h4,p{
+        font-size: 0.7rem;
     }
     footer .last-line p,i{
         font-size: 0.5rem;
