travel_page_updated_with_search_filter

--- a/shopP/shopA/templates/about.html
+++ b/shopP/shopA/templates/about.html
@@ -25,7 +25,7 @@
             <li><a href="{%url 'main'%}">Home</a></li>
             <li><a href="{%url 'out_page'%}"><i class="fa-regular fa-user" style="margin-right: 0.5rem;"></i>{{request.user.first_name|capfirst}}</a></li>
             <li><a href="" class="active">About Me</a></li>
-            <li class="book"><a href="{%url 'travel'%}">Book</a></li>
+            <li class="book"><a href="{%url 'travel-page'%}">Book</a></li>
         </ul>
     </div>
    </nav>
