--- a/shopP/shopA/static/css/t-p.css
+++ b/shopP/shopA/static/css/t-p.css
@@ -65,11 +65,22 @@ nav .nav-center .book a:hover{
     footer .last-line p,i{
         font-size: 0.5rem;
     }
-    container .butn a{
+    .log-box{
+        width: 60%;
+    }
+    container .small-details{
+        text-align: center;
+    }
+    container .small-details h1,p{
+        font-size: 0.9rem;
+    }
+    container .nav-search{
         display: block;
-        width: 100%;
-        height: 100%;
-        font-size: 0.6rem;
+        margin: auto;
+        text-align: center;
+    }
+    footer{
+        position: absolute;
     }
 }
 @media (max-width:390px){
@@ -83,8 +94,7 @@ container .nav-search{
     justify-content: center;
     flex-wrap: wrap;
     gap: 1rem;
-    width: 100%;
-    margin-top: 1rem;
+    /* background-color: rebeccapurple; */
 }
 container .nav-search input{
     padding: 1rem 4rem;
@@ -101,55 +111,44 @@ container .nav-search button:hover{
     color: white;
     border-radius: 3rem;
 }
-container .carousel-img-list{
-    display: grid;
-    grid-template-columns: repeat(7,1fr);
-    font-size: 0;
-    overflow-x: auto;
-    scrollbar-width: none;
-    margin-bottom: 5rem;
-    margin-top: 5rem;
+container .small-card{
+    display: flex;
+    align-items: center;
+    gap: 5rem;
+    flex-wrap: wrap;
+    margin: 1rem 5rem;
+    padding: 1rem 1rem;
+    /* background-color: red; */
 }
-container .carousel-img-list::-webkit-scrollbar{
-    display: none;
-}
-container .carousel-img-list .image-item{
-    width: 400px;
-    height: 500px;
+container .small-card .img img{
+    width: 25vw;
+    height: 20vh;
     object-fit: cover;
 }
-container .grid{
-    margin-top: 8vh;
+container .small-card .small-details h1,p{
+    margin-bottom: 1rem;
 }
-container .grid img{
-    object-fit: cover;
-    width: 100%;
-    height: 15rem;
-}
-container .grid p{
-    text-align: center;
-    font-size: 2rem;
-    font-family: 'Long Cang', cursive;
-    margin: 2rem 0;
-}
-container .butn a{
-    display: block;
-    margin: auto;
-    width: 10%;
+container .small-card .small-details a{
     text-decoration: none;
     color: black;
-    border: 1px solid black;
-    text-align: center;
-    padding: 1rem 0;
+    box-shadow: 2px 5px 5px lightgrey;
+    padding: 0.5rem 1rem;
+    /* background-color: rebeccapurple; */
 }
-container .butn a:hover{
-    background-color: #333;
+container .small-card .small-details a:hover{
     color: white;
-    transition: all 0.5s ease-in-out;
+    background-color: black;
+    transition: all 0.2s ease-in-out;
+    cursor: alias;
 }
+
 
 footer{
     padding: 0.5rem 3rem;
+    position: static;
+    bottom: 0;
+    left: 0;
+    right: 0;
 }
 footer .row{
     display: flex;
