--- a/shopP/shopA/templates/travel-page.html
+++ b/shopP/shopA/templates/travel-page.html
@@ -4,71 +4,59 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Travel To Main</title>
-    <link href="{%static 'img/travel.svg'%}" rel="icon" type="img/icons"> 
+    <title>Book</title>
+    <link href="{%static 'img/hotel.svg'%}" rel="icon" type="img/icons"> 
     <!--Css link-->
-    <link href="{%static 'css/main.css'%}" rel="stylesheet" type="text/css">
+    <link href="{%static 'css/t-p.css'%}" rel="stylesheet" type="text/css">
     <!--google font-->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500&family=Long+Cang&family=Merriweather:wght@300;400&family=Playfair+Display:ital,wght@0,400;0,500;1,400&family=Raleway&family=Ubuntu:wght@300;400&display=swap" rel="stylesheet">
     <!--Fontawesome icon-->
     <script src="{% static 'fontawesomefree/js/all.min.js' %}"></script>
 </head>
 <body>
-
    <nav>
+
     <div class="nav-head">
         <img src="{%static 'img/T&T.png'%}" alt="logo" style="width: 4rem;"> 
         <h1 style="font-family: 'Playfair Display',sans-serif;">Travel & Tourism</h1>
     </div>
     <div class="nav-center">
         <ul>
-            <li><a href="#" class="active">Home</a></li>
+            <li><a href="{%url 'main'%}">Home</a></li>
             <li><a href="{%url 'out_page'%}"><i class="fa-regular fa-user" style="margin-right: 0.5rem;"></i>{{request.user.first_name|capfirst}}</a></li>
             <li><a href="{%url 'about'%}">About Me</a></li>
-            <li class="book"><a href="{%url 'travel-page'%}">Book</a></li>
+            <li><a href="#" class="active">Book</a></li>
         </ul>
     </div>
    </nav>
 
     <container>
-        <div class="carousel-img-list">
-            <img src="{%static 'img/carousel/1.jpg'%}" alt="1" class="image-item">
-            <img src="{%static 'img/carousel/2.jpg'%}" alt="2" class="image-item">
-            <img src="{%static 'img/carousel/3.jpg'%}" alt="3" class="image-item">
-            <img src="{%static 'img/carousel/4.jpg'%}" alt="4" class="image-item">
-            <img src="{%static 'img/carousel/5.jpg'%}" alt="5" class="image-item">
-            <img src="{%static 'img/carousel/6.jpg'%}" alt="6" class="image-item">
-            <img src="{%static 'img/carousel/7.jpg'%}" alt="7" class="image-item">
-        </div>
 
-        
-    <div class="nav-search">
         <form method="get">
-        <input type="search" name="searchname" placeholder="Select Your Destination">
-        <button type="submit">Search</button>
-        <!-- <a href="{%url 'travel'%}">Search</a> -->
+        <div class="nav-search">
+            <input type="search" name="searchname" placeholder="Select Your Destination" required>
+            <input type="text" name="location" placeholder="Exact-Location">
+            <input type="text" name="price" placeholder="Price">
+            <button type="submit">Search</button>
+            <!-- <a href="{%url 'travel'%}">Search</a> -->
+        </div>
         </form>
-    </div>
-
-        <div class="grid">
-            <div class="i-1">
-                <img src="{%static 'img/main/1.jpg'%}">
-                <p>“When preparing to travel, lay out all your clothes and all your money. Then take half the clothes and twice the money.” <br> - Susan Heller</p>
+    
+        {%for d in data%}
+        <form method="POST">
+        <div class="small-card">
+            <div class="img">
+                <img src="{%static 'img/carousel/1.jpg'%}" alt="img-1">
             </div>
-            <div class="i-2">
-                <img src="{%static 'img/main/2.jpg'%}">
-                <p>“Traveling - it leaves you speechless, then turns you into a storyteller.”<br> - Ibn Battuta</p>
-            </div>
-            <div class="i-3">
-                <img src="{%static 'img/main/3.jpg'%}">
-                <p>“To Travel is to Live.”<br> - Hans Christian Andersen</p>
+            <div class="small-details">
+                <h1>{{d.head}} ({{d.sentence}})</h1>
+                <p>{{d.attraction}}</p>
+                <p>Rs. {{d.price}}</p>
+                <a href="{%url 'travel'%}">More Details</a>
             </div>
         </div>
-
-        <div class="butn">
-            <a href="{%url 'travel-page'%}">Book Now to Travel!</a>
-        </div>
-
+        </form>
+        {% endfor %}
     </container>
 
     <footer>
