--- a/shopP/shopA/templates/travel-page.html
+++ b/shopP/shopA/templates/travel-page.html
@@ -52,7 +52,8 @@
                 <h1>{{d.head}} ({{d.sentence}})</h1>
                 <p>{{d.attraction}}</p>
                 <p>Rs. {{d.price}}</p>
-                <a href="{%url 'travel'%}">More Details</a>
+                <!-- <a href="{%url 'travel'%}">More Details</a> -->
+                <button type="button" name="more-details">More Details</button>
             </div>
         </div>
         </form>
