--- a/shopP/shopA/templates/travel-page.html
+++ b/shopP/shopA/templates/travel-page.html
@@ -33,10 +33,11 @@
     <container>
 
         <form method="get">
+            <!-- {%csrf_token%} -->
         <div class="nav-search">
-            <input type="search" name="searchname" placeholder="Select Your Destination" required>
-            <input type="text" name="location" placeholder="Exact-Location">
-            <input type="text" name="price" placeholder="Price">
+            <input type="search" name="searchname" placeholder="Select Your Destination">
+            <input type="location" name="search" placeholder="Exact-Location">
+            <input type="price" name="search" placeholder="Price">
             <button type="submit">Search</button>
             <!-- <a href="{%url 'travel'%}">Search</a> -->
         </div>
@@ -53,7 +54,7 @@
                 <p>{{d.attraction}}</p>
                 <p>Rs. {{d.price}}</p>
                 <!-- <a href="{%url 'travel'%}">More Details</a> -->
-                <button type="button" name="more-details">More Details</button>
+                <!-- <button type="button" name="more-details">More Details</button> -->
             </div>
         </div>
         </form>
