--- a/shopP/shopA/templates/travel.html
+++ b/shopP/shopA/templates/travel.html
@@ -54,7 +54,7 @@
                 <li>{{d.nearby}}</li><br>
                 <li>{{d.attraction}}</li><br>
                 <li>{{d.transportation}}</li><br>
-                <li>Rs. {{d.price}}</li>
+                <li>Rs. {{d.price}} (Entry Cost Only)</li>
             </ul>
             <!-- <button type="submit" style="margin:1rem 0;">Book</button> -->
             <div class="b-d-link">
