--- a/shopP/shopA/static/css/form.css
+++ b/shopP/shopA/static/css/form.css
@@ -76,9 +76,15 @@ container{
     display: flex;
     flex-wrap: wrap;
 }
+container form h1{
+    margin-bottom: 1rem;
+}
 form{
+    border: 1px hidden;
+    box-shadow: 2px 10px 10px lightgrey;
     margin: auto;
     text-align: center;
+    padding: 1.5rem 2rem;
     /* margin-top: 5vh; */
 }
 form input{
