--- a/shopP/shopA/static/css/payment.css
+++ b/shopP/shopA/static/css/payment.css
@@ -141,7 +141,16 @@ container .small-card .small-details a:hover{
     transition: all 0.2s ease-in-out;
     cursor: alias;
 }
-
+container .small-card .small-details button{
+    background-color: white;
+    border: none;
+    padding: 0.5rem 2rem;
+    box-shadow: 2px 5px 5px lightgrey;
+}
+container .small-card .small-details button:hover{
+    background-color: #0077b5;
+    color: white;
+}
 
 
 footer{
