--- a/shopP/shopA/templates/log.html
+++ b/shopP/shopA/templates/log.html
@@ -22,6 +22,7 @@
             <img src="{%static 'img/T&T.png'%}" alt="logo" style="width: 4rem;"> 
             <h1 style="font-family: 'Playfair Display',sans-serif;">Travel & Tourism</h1>
         </div>
+        <a href="{%url 'main'%}">Home</a>
     </nav>
     <form method="POST">
         {%csrf_token%}
