--- a/shopP/shopA/templates/logout.html
+++ b/shopP/shopA/templates/logout.html
@@ -26,9 +26,9 @@
 
     <container>
         <div class="logout-box">
-            <div class="box-1">
+            <!-- <div class="box-1">
                 <p style="margin-bottom: 5rem;">You have Successfully logout from the page!</p>
-            </div>
+            </div> -->
             <div class="box-2">
                 <p>Please Redirect to this page -> <a href="{%url 'login'%}">Login</a></p>
             </div>
