--- a/shopP/shopA/templates/payment.html
+++ b/shopP/shopA/templates/payment.html
@@ -50,48 +50,13 @@
                 <h1 name="head">{{d.head}} ({{d.sentence}})</h1>
                 <p>{{d.attraction}}</p>
                 <p>Rs. {{d.price}}</p>
-                <!-- <a href="{%url 'travel'%}">More Details</a> -->
-                <!-- <button type="button" name="more-details">More Details</button> -->
-                <!--Payment Integration-->
-                <button class="btn" id="payment">Pay</button>
-                <!-- <a href="//rzp.io/l/s34EIhlsC">Pay</a> -->
+                <!-- <button class="btn" id="payment">Pay</button> -->
+                <a href="{%url 'payment_page'%}">Pay</a>
             </div>
         </div>
-        <!-- Razorpay's Javascript code. -->
-        <!-- <script src="https://checkout.razorpay.com/v1/checkout.js"></script> -->
-        <!-- <script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_NVVyCobJSY2Pa8" async></script> -->
         </form>
         {% endfor %}
-        <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-        <script>
-            var options = {
-            
-            // Enter the Key ID generated from the Dashboard
-            key: "{{ razorpay_merchant_key }}", 
-            
-            // Amount is in currency subunits.
-            // Default currency is INR. Hence, 
-            // 50000 refers to 50000 paise
-            amount: "{{ razorpay_amount }}", 
-            currency: "{{ currency }}",
-            
-            // Your/store name.
-            name: "Dj Razorpay", 
-            
-            // Pass the `id` obtained in the response of Step 1
-            order_id: "{{ razorpay_order_id }}", 
-            callback_url: "{{ callback_url }}",
-            };
-            
-            // initialise razorpay with the options.
-            var rzp1 = new Razorpay(options);
-            
-            // add event listener to the payment button.
-            document.getElementById("payment").onclick = function (e) {
-            rzp1.open();
-            e.preventDefault();
-            };
-        </script>
+
     </container>
 
     <footer>
